--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML Transitional//RU">
 <html>
 	<head>
-        <link rel="stylesheet" href="../css/main.css" type="text/css">
+        <link rel="stylesheet" href="/css/main.css" type="text/css">
 		<title>CSS text</title>
         </head>
 	<body>
