--- a/index.html
+++ b/index.html
@@ -1,22 +1,67 @@
 <!DOCTYPE HTML Transitional//RU">
 <html>
-	<head>
-        <link rel="stylesheet" href="/css/main.css" type="text/css">
-		<title>CSS text</title>
-        </head>
-	<body>
-		<div class="hdr">
-	      <span></span>D<span>o</span><span>y</span><span>k</span><span></span>
-	      <div class="red"><span>C</span><span>o</span><span>d</span><span>e</span><span>r</span></div>
-          <div class="orange"><span>C</span><span>o</span><span>d</span><span>e</span><span>r</span></div>
-        </div>
-        <ol>
-            <li>suzzzvf</li>
-            <li>zbdfbdx</li>
-            <li>zdbzdfb</li>
-            <li>zdbdfbzfdzb</li>
-        </ol>
-        <button class="example facebook">Like this!</button>
-   </body>
-</html>
 
+<head>
+
+    <link rel="stylesheet" href="./css/main.css" type="text/css">
+    <title>CSS text</title>
+</head>
+
+<body>
+    <div class="container">
+        <div class="sidebar">
+            <p class="custom"><a href="#">Главная</a>
+                <a href="#">Контакты</a>
+                <a href="#">Отзывы</a>
+            </p>
+        </div>
+        <div class="header">
+            <div class="hdr">
+                <div><span>O</span><span>V</span><span>E</span><span>R</span><span>W</span><span>A</span><span>T</span><span>C</span><span>H</span><span>E</span><span>R</span></div>
+            </div>
+            <h1></h1>
+        </div>
+        <div class="content">
+            <h2></h2>
+            <p>
+            </p>
+
+        </div>
+        <table class="table top9">
+            <caption>oishosh;ozssdv</caption>
+            <tr>
+                <td><a href="#">suzzzvf</a></td>
+            </tr>
+            <tr>
+                <td><a href="#">suzzzvf</a></td>
+            </tr>
+            <tr>
+                <td><a href="#">suzzzvf</a></td>
+            </tr>
+            <tr>
+                <td><a href="#">suzzzvf</a></td>
+            </tr>
+            <tr>
+                <td><a href="#">suzzzvf</a></td>
+            </tr>
+            <tr>
+                <td><a href="#">suzzzvf</a></td>
+            </tr>
+            <tr>
+                <td><a href="#">suzzzvf</a></td>
+            </tr>
+            <tr>
+                <td><a href="#">suzzzvf</a></td>
+            </tr>
+            <tr>
+                <td><a href="#">suzzzvf</a></td>
+            </tr>
+            <tr>
+                <td><a href="#">suzzzvf</a></td>
+            </tr>
+        </table>
+        <div class="footer">&copy; Striker,nik_chic</div>
+    </div>
+</body>
+
+</html>
