--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 <body>
     <div class="container">
         <div class="sidebar">
-            <p class="custom"><a href="#">Главная</a>
-                <a href="#">Контакты</a>
+            <p class="custom"><a href="#">Герои</a>
+                <a href="#">Карты</a>
                 <a href="#">Отзывы</a>
             </p>
         </div>
@@ -21,14 +21,12 @@
             </div>
             <h1></h1>
         </div>
-        <div class="content">
-            <h2></h2>
-            <p>
-            </p>
-
+        <div>
+            <h2 class="t1">Добро пожаловать на сайт OVERWATHER!</h2>
+            <p class="t2">Overwatcher-здесь вы найдете интересную многим информацию о героях и картах игры Overwatch,а также получите полезные советы по игровой механики, которые особенно пригодятся новичкам в этой увлекательной, разнообразной игровой вселенной Overwatch.</p>
         </div>
         <table class="table top9">
-            <caption>oishosh;ozssdv</caption>
+            <caption>Карты</caption>
             <tr>
                 <td><a href="#">suzzzvf</a></td>
             </tr>
@@ -60,7 +58,7 @@
                 <td><a href="#">suzzzvf</a></td>
             </tr>
         </table>
-        <div class="footer">&copy; Striker,nik_chic</div>
+        <div class="footer">&copy; STRIKER,DJAZZY</div>
     </div>
 </body>
 
