--- a/heroes.html
+++ b/heroes.html
@@ -53,7 +53,7 @@
                             <img src="img/71px-%D0%A1%D0%BE%D0%BC%D0%B1%D1%80%D0%B0-%D0%BF%D0%BE%D1%80%D1%82%D1%80%D0%B5%D1%82.png" />
                             <h3>Сомбра</h3>
                         </div>
-                        <br>
+
                         <div class="hero">
                             <img src="img/71px-%D0%A2%D1%80%D0%B5%D0%B9%D1%81%D0%B5%D1%80-%D0%BF%D0%BE%D1%80%D1%82%D1%80%D0%B5%D1%82.png" />
                             <h3>Трейсер</h3>
@@ -68,114 +68,115 @@
                 </div>
 
 
+
+
+
+                <div class="class">
+                    <div class="class-header">
+                        <h2>Защита</h2><img src="img/DefenseIcon.png" />
+
+                    </div>
+                    <div class="heroes">
+                        <div class="hero">
+                            <img src="img/71px-%D0%91%D0%B0%D1%81%D1%82%D0%B8%D0%BE%D0%BD-%D0%BF%D0%BE%D1%80%D1%82%D1%80%D0%B5%D1%82.png" />
+                            <h3>Бастион</h3>
+                        </div>
+                        <div class="hero">
+                            <img src="img/71px-%D0%9A%D1%80%D1%8B%D1%81%D0%B0%D0%B2%D1%87%D0%B8%D0%BA-%D0%BF%D0%BE%D1%80%D1%82%D1%80%D0%B5%D1%82.png" />
+                            <h3>Крысавчик</h3>
+                        </div>
+                        <div class="hero">
+                            <img src="img/71px-%D0%9C%D1%8D%D0%B9-%D0%BF%D0%BE%D1%80%D1%82%D1%80%D0%B5%D1%82.png" />
+                            <h3>Мэй</h3>
+                        </div>
+                        <div class="hero">
+                            <img src="img/71px-%D0%A0%D0%BE%D0%BA%D0%BE%D0%B2%D0%B0%D1%8F_%D0%B2%D0%B4%D0%BE%D0%B2%D0%B0-%D0%BF%D0%BE%D1%80%D1%82%D1%80%D0%B5%D1%82.png" />
+                            <h3>Вдова</h3>
+                        </div>
+
+                        <div class="hero">
+                            <img src="img/71px-%D0%A2%D0%BE%D1%80%D0%B1%D1%8C%D0%BE%D1%80%D0%BD-%D0%BF%D0%BE%D1%80%D1%82%D1%80%D0%B5%D1%82.png" />
+                            <h3>Торбьорн</h3>
+                        </div>
+
+                        <div class="hero">
+                            <img src="img/71px-%D0%A5%D0%B0%D0%BD%D0%B4%D0%B7%D0%BE-%D0%BF%D0%BE%D1%80%D1%82%D1%80%D0%B5%D1%82.png" />
+                            <h3>Хандзо</h3>
+                        </div>
+
+
+
+                    </div>
+                </div>
+
+
+
+
+                <div class="class">
+                    <div class="class-header">
+                        <h2>Танки</h2><img src="img/TankIcon.png" />
+
+                    </div>
+                    <div class="heroes">
+                        <div class="hero">
+                            <img src="img/71px-%D0%97%D0%B0%D1%80%D1%8F-%D0%BF%D0%BE%D1%80%D1%82%D1%80%D0%B5%D1%82.png" />
+                            <h3>Заря</h3>
+                        </div>
+                        <div class="hero">
+                            <img src="img/71px-%D0%9E%D1%80%D0%B8%D1%81%D0%B0-%D0%BF%D0%BE%D1%80%D1%82%D1%80%D0%B5%D1%82.png" />
+                            <h3>Ориса</h3>
+                        </div>
+                        <div class="hero">
+                            <img src="img/71px-%D0%A0%D0%B0%D0%B9%D0%BD%D1%85%D0%B0%D1%80%D0%B4%D1%82-%D0%BF%D0%BE%D1%80%D1%82%D1%80%D0%B5%D1%82.png" />
+                            <h3>Райнхард</h3>
+                        </div>
+                        <div class="hero">
+                            <img src="img/71px-%D0%A2%D1%83%D1%80%D0%B1%D0%BE%D1%81%D0%B2%D0%B8%D0%BD-%D0%BF%D0%BE%D1%80%D1%82%D1%80%D0%B5%D1%82.png" />
+                            <h3>Турбосвин</h3>
+                        </div>
+                        <div class="hero">
+                            <img src="img/71px-%D0%A3%D0%B8%D0%BD%D1%81%D1%82%D0%BE%D0%BD-%D0%BF%D0%BE%D1%80%D1%82%D1%80%D0%B5%D1%82.png" />
+                            <h3>Уинстон</h3>
+                        </div>
+
+                        <div class="hero">
+                            <img src="img/71px-D.Va-%D0%BF%D0%BE%D1%80%D1%82%D1%80%D0%B5%D1%82.png" />
+                            <h3>D.Va</h3>
+                        </div>
+
+
+
+                    </div>
+                </div>
+                <div class="class">
+                    <div class="class-header">
+                        <h2>Поддержка</h2><img src="img/SupportIcon.png" />
+
+                    </div>
+                    <div class="heroes">
+                        <div class="hero">
+                            <img src="img/71px-%D0%90%D0%BD%D0%B0-%D0%BF%D0%BE%D1%80%D1%82%D1%80%D0%B5%D1%82.png" />
+                            <h3>Ана</h3>
+                        </div>
+                        <div class="hero">
+                            <img src="img/71px-%D0%90%D0%BD%D0%B3%D0%B5%D0%BB-%D0%BF%D0%BE%D1%80%D1%82%D1%80%D0%B5%D1%82.png" />
+                            <h3>Ангел</h3>
+                        </div>
+                        <div class="hero">
+                            <img src="img/71px-%D0%94%D0%B7%D0%B5%D0%BD%D1%8A%D1%8F%D1%82%D1%82%D0%B0-%D0%BF%D0%BE%D1%80%D1%82%D1%80%D0%B5%D1%82.png" />
+                            <h3>Дзеньятта</h3>
+                        </div>
+                        <div class="hero">
+                            <img src="img/71px-%D0%9B%D1%83%D1%81%D0%B8%D0%BE-%D0%BF%D0%BE%D1%80%D1%82%D1%80%D0%B5%D1%82.png" />
+                            <h3>Лусио</h3>
+                        </div>
+                        <div class="hero">
+                            <img src="img/71px-%D0%A1%D0%B8%D0%BC%D0%BC%D0%B5%D1%82%D1%80%D0%B0-%D0%BF%D0%BE%D1%80%D1%82%D1%80%D0%B5%D1%82.png" />
+                            <h3>Симметра</h3>
+                        </div>
+                    </div>
+                </div>
             </div>
-
-
-            <div class="class">
-                <div class="class-header">
-                    <h2>Защита</h2><img src="img/DefenseIcon.png" />
-
-                </div>
-                <div class="heroes">
-                    <div class="hero">
-                        <img src="img/71px-%D0%91%D0%B0%D1%81%D1%82%D0%B8%D0%BE%D0%BD-%D0%BF%D0%BE%D1%80%D1%82%D1%80%D0%B5%D1%82.png" />
-                        <h3>Бастион</h3>
-                    </div>
-                    <div class="hero">
-                        <img src="img/71px-%D0%9A%D1%80%D1%8B%D1%81%D0%B0%D0%B2%D1%87%D0%B8%D0%BA-%D0%BF%D0%BE%D1%80%D1%82%D1%80%D0%B5%D1%82.png" />
-                        <h3>Крысавчик</h3>
-                    </div>
-                    <div class="hero">
-                        <img src="img/71px-%D0%9C%D1%8D%D0%B9-%D0%BF%D0%BE%D1%80%D1%82%D1%80%D0%B5%D1%82.png" />
-                        <h3>Мэй</h3>
-                    </div>
-                    <div class="hero">
-                        <img src="img/71px-%D0%A0%D0%BE%D0%BA%D0%BE%D0%B2%D0%B0%D1%8F_%D0%B2%D0%B4%D0%BE%D0%B2%D0%B0-%D0%BF%D0%BE%D1%80%D1%82%D1%80%D0%B5%D1%82.png" />
-                        <h3>Роковая вдова</h3>
-                    </div>
-                    <div class="hero">
-                        <img src="img/71px-%D0%A2%D0%BE%D1%80%D0%B1%D1%8C%D0%BE%D1%80%D0%BD-%D0%BF%D0%BE%D1%80%D1%82%D1%80%D0%B5%D1%82.png" />
-                        <h3>Торбьорн</h3>
-                    </div>
-                    <br>
-                    <div class="hero">
-                        <img src="img/71px-%D0%A5%D0%B0%D0%BD%D0%B4%D0%B7%D0%BE-%D0%BF%D0%BE%D1%80%D1%82%D1%80%D0%B5%D1%82.png" />
-                        <h3>Хандзо</h3>
-                    </div>
-
-
-
-                </div>
-            </div>
-
-
-
-
-            <div class="class">
-                <div class="class-header">
-                    <h2>Танки</h2><img src="img/TankIcon.png" />
-
-                </div>
-                <div class="heroes">
-                    <div class="hero">
-                        <img src="img/71px-%D0%97%D0%B0%D1%80%D1%8F-%D0%BF%D0%BE%D1%80%D1%82%D1%80%D0%B5%D1%82.png" />
-                        <h3>Заря</h3>
-                    </div>
-                    <div class="hero">
-                        <img src="img/71px-%D0%9E%D1%80%D0%B8%D1%81%D0%B0-%D0%BF%D0%BE%D1%80%D1%82%D1%80%D0%B5%D1%82.png" />
-                        <h3>Ориса</h3>
-                    </div>
-                    <div class="hero">
-                        <img src="img/71px-%D0%A0%D0%B0%D0%B9%D0%BD%D1%85%D0%B0%D1%80%D0%B4%D1%82-%D0%BF%D0%BE%D1%80%D1%82%D1%80%D0%B5%D1%82.png" />
-                        <h3>Райнхард</h3>
-                    </div>
-                    <div class="hero">
-                        <img src="img/71px-%D0%A2%D1%83%D1%80%D0%B1%D0%BE%D1%81%D0%B2%D0%B8%D0%BD-%D0%BF%D0%BE%D1%80%D1%82%D1%80%D0%B5%D1%82.png" />
-                        <h3>Турбосвин</h3>
-                    </div>
-                    <div class="hero">
-                        <img src="img/71px-%D0%A3%D0%B8%D0%BD%D1%81%D1%82%D0%BE%D0%BD-%D0%BF%D0%BE%D1%80%D1%82%D1%80%D0%B5%D1%82.png" />
-                        <h3>Уинстон</h3>
-                    </div>
-                    <br>
-                    <div class="hero">
-                        <img src="img/71px-D.Va-%D0%BF%D0%BE%D1%80%D1%82%D1%80%D0%B5%D1%82.png" />
-                        <h3>D.Va</h3>
-                    </div>
-
-
-
-                </div>
-            </div>
-            <div class="class">
-                <div class="class-header">
-                    <h2>Поддержка</h2><img src="img/SupportIcon.png" />
-
-                </div>
-                <div class="heroes">
-                    <div class="hero">
-                        <img src="img/71px-%D0%90%D0%BD%D0%B0-%D0%BF%D0%BE%D1%80%D1%82%D1%80%D0%B5%D1%82.png" />
-                        <h3>Ана</h3>
-                    </div>
-                    <div class="hero">
-                        <img src="img/71px-%D0%90%D0%BD%D0%B3%D0%B5%D0%BB-%D0%BF%D0%BE%D1%80%D1%82%D1%80%D0%B5%D1%82.png" />
-                        <h3>Ангел</h3>
-                    </div>
-                    <div class="hero">
-                        <img src="img/71px-%D0%94%D0%B7%D0%B5%D0%BD%D1%8A%D1%8F%D1%82%D1%82%D0%B0-%D0%BF%D0%BE%D1%80%D1%82%D1%80%D0%B5%D1%82.png" />
-                        <h3>Дзеньятта</h3>
-                    </div>
-                    <div class="hero">
-                        <img src="img/71px-%D0%9B%D1%83%D1%81%D0%B8%D0%BE-%D0%BF%D0%BE%D1%80%D1%82%D1%80%D0%B5%D1%82.png" />
-                        <h3>Лусио</h3>
-                    </div>
-                    <div class="hero">
-                        <img src="img/71px-%D0%A1%D0%B8%D0%BC%D0%BC%D0%B5%D1%82%D1%80%D0%B0-%D0%BF%D0%BE%D1%80%D1%82%D1%80%D0%B5%D1%82.png" />
-                        <h3>Симметра</h3>
-                    </div>
-                </div>
-            </div>
-
         </div>
     </div>
 
