--- a/heroes.html
+++ b/heroes.html
@@ -1,7 +1,7 @@
 <head>
+    <link rel="stylesheet" href="/bootstrap.min.css" />
     <link rel="stylesheet" href="/header.css" />
     <link rel="stylesheet" href="/heroes.css" />
-    <link rel="stylesheet" href="/bootstrap.min.css" />
     <title>Герои</title>
 </head>
 
@@ -26,156 +26,219 @@
             </div>
         </div>
         <div class="content container">
-            <div class="classes">
-                <div class="class">
-                    <div class="class-header">
-                        <h2>Штурм</h2><img src="img/OffenseIcon.png" />
 
+            <div class="col-md-8">
+                <div class="classes">
+                    <div class="class">
+                        <div class="class-header">
+                            <h2>Штурм</h2><img src="img/OffenseIcon.png" />
+                        </div>
+                        <div class="heroes">
+                            <div class="hero">
+                                <img src="img/71px-%D0%93%D1%8D%D0%BD%D0%B4%D0%B7%D0%B8-%D0%BF%D0%BE%D1%80%D1%82%D1%80%D0%B5%D1%82.png" />
+                                <h3>Гэндзи</h3>
+                            </div>
+                            <div class="hero">
+                                <img src="img/71px-%D0%96%D0%BD%D0%B5%D1%86-%D0%BF%D0%BE%D1%80%D1%82%D1%80%D0%B5%D1%82.png" />
+                                <h3>Жнец</h3>
+                            </div>
+                            <div class="hero">
+                                <img src="img/71px-%D0%9C%D0%B0%D0%BA%D0%BA%D1%80%D0%B8-%D0%BF%D0%BE%D1%80%D1%82%D1%80%D0%B5%D1%82.png" />
+                                <h3>Маккри</h3>
+                            </div>
+                            <div class="hero">
+                                <img src="img/71px-%D0%A1%D0%BE%D0%BB%D0%B4%D0%B0%D1%82-76-%D0%BF%D0%BE%D1%80%D1%82%D1%80%D0%B5%D1%82.png" />
+                                <h3>Солдат-76</h3>
+                            </div>
+                            <div class="hero">
+                                <img src="img/71px-%D0%A1%D0%BE%D0%BC%D0%B1%D1%80%D0%B0-%D0%BF%D0%BE%D1%80%D1%82%D1%80%D0%B5%D1%82.png" />
+                                <h3>Сомбра</h3>
+                            </div>
+
+                            <div class="hero">
+                                <img src="img/71px-%D0%A2%D1%80%D0%B5%D0%B9%D1%81%D0%B5%D1%80-%D0%BF%D0%BE%D1%80%D1%82%D1%80%D0%B5%D1%82.png" />
+                                <h3>Трейсер</h3>
+                            </div>
+                            <div class="hero">
+                                <img src="img/71px-%D0%A4%D0%B0%D1%80%D1%80%D0%B0-%D0%BF%D0%BE%D1%80%D1%82%D1%80%D0%B5%D1%82.png" />
+                                <h3>Фарра</h3>
+                            </div>
+                        </div>
                     </div>
-                    <div class="heroes">
-                        <div class="hero">
-                            <img src="img/71px-%D0%93%D1%8D%D0%BD%D0%B4%D0%B7%D0%B8-%D0%BF%D0%BE%D1%80%D1%82%D1%80%D0%B5%D1%82.png" />
-                            <h3>Гэндзи</h3>
+                    <div class="class">
+                        <div class="class-header">
+                            <h2>Защита</h2><img src="img/DefenseIcon.png" />
                         </div>
-                        <div class="hero">
-                            <img src="img/71px-%D0%96%D0%BD%D0%B5%D1%86-%D0%BF%D0%BE%D1%80%D1%82%D1%80%D0%B5%D1%82.png" />
-                            <h3>Жнец</h3>
-                        </div>
-                        <div class="hero">
-                            <img src="img/71px-%D0%9C%D0%B0%D0%BA%D0%BA%D1%80%D0%B8-%D0%BF%D0%BE%D1%80%D1%82%D1%80%D0%B5%D1%82.png" />
-                            <h3>Маккри</h3>
-                        </div>
-                        <div class="hero">
-                            <img src="img/71px-%D0%A1%D0%BE%D0%BB%D0%B4%D0%B0%D1%82-76-%D0%BF%D0%BE%D1%80%D1%82%D1%80%D0%B5%D1%82.png" />
-                            <h3>Солдат-76</h3>
-                        </div>
-                        <div class="hero">
-                            <img src="img/71px-%D0%A1%D0%BE%D0%BC%D0%B1%D1%80%D0%B0-%D0%BF%D0%BE%D1%80%D1%82%D1%80%D0%B5%D1%82.png" />
-                            <h3>Сомбра</h3>
-                        </div>
+                        <div class="heroes">
+                            <div class="hero">
+                                <img src="img/71px-%D0%91%D0%B0%D1%81%D1%82%D0%B8%D0%BE%D0%BD-%D0%BF%D0%BE%D1%80%D1%82%D1%80%D0%B5%D1%82.png" />
+                                <h3>Бастион</h3>
+                            </div>
+                            <div class="hero">
+                                <img src="img/71px-%D0%9A%D1%80%D1%8B%D1%81%D0%B0%D0%B2%D1%87%D0%B8%D0%BA-%D0%BF%D0%BE%D1%80%D1%82%D1%80%D0%B5%D1%82.png" />
+                                <h3>Крысавчик</h3>
+                            </div>
+                            <div class="hero">
+                                <img src="img/71px-%D0%9C%D1%8D%D0%B9-%D0%BF%D0%BE%D1%80%D1%82%D1%80%D0%B5%D1%82.png" />
+                                <h3>Мэй</h3>
+                            </div>
+                            <div class="hero">
+                                <img src="img/71px-%D0%A0%D0%BE%D0%BA%D0%BE%D0%B2%D0%B0%D1%8F_%D0%B2%D0%B4%D0%BE%D0%B2%D0%B0-%D0%BF%D0%BE%D1%80%D1%82%D1%80%D0%B5%D1%82.png" />
+                                <h3>Вдова</h3>
+                            </div>
 
-                        <div class="hero">
-                            <img src="img/71px-%D0%A2%D1%80%D0%B5%D0%B9%D1%81%D0%B5%D1%80-%D0%BF%D0%BE%D1%80%D1%82%D1%80%D0%B5%D1%82.png" />
-                            <h3>Трейсер</h3>
-                        </div>
-                        <div class="hero">
-                            <img src="img/71px-%D0%A4%D0%B0%D1%80%D1%80%D0%B0-%D0%BF%D0%BE%D1%80%D1%82%D1%80%D0%B5%D1%82.png" />
-                            <h3>Фарра</h3>
-                        </div>
+                            <div class="hero">
+                                <img src="img/71px-%D0%A2%D0%BE%D1%80%D0%B1%D1%8C%D0%BE%D1%80%D0%BD-%D0%BF%D0%BE%D1%80%D1%82%D1%80%D0%B5%D1%82.png" />
+                                <h3>Торбьорн</h3>
+                            </div>
 
-
+                            <div class="hero">
+                                <img src="img/71px-%D0%A5%D0%B0%D0%BD%D0%B4%D0%B7%D0%BE-%D0%BF%D0%BE%D1%80%D1%82%D1%80%D0%B5%D1%82.png" />
+                                <h3>Хандзо</h3>
+                            </div>
+                        </div>
                     </div>
-                </div>
+                    <div class="class">
+                        <div class="class-header">
+                            <h2>Танки</h2><img src="img/TankIcon.png" />
 
+                        </div>
+                        <div class="heroes">
+                            <div class="hero">
+                                <img src="img/71px-%D0%97%D0%B0%D1%80%D1%8F-%D0%BF%D0%BE%D1%80%D1%82%D1%80%D0%B5%D1%82.png" />
+                                <h3>Заря</h3>
+                            </div>
+                            <div class="hero">
+                                <img src="img/71px-%D0%9E%D1%80%D0%B8%D1%81%D0%B0-%D0%BF%D0%BE%D1%80%D1%82%D1%80%D0%B5%D1%82.png" />
+                                <h3>Ориса</h3>
+                            </div>
+                            <div class="hero">
+                                <img src="img/71px-%D0%A0%D0%B0%D0%B9%D0%BD%D1%85%D0%B0%D1%80%D0%B4%D1%82-%D0%BF%D0%BE%D1%80%D1%82%D1%80%D0%B5%D1%82.png" />
+                                <h3>Райнхард</h3>
+                            </div>
+                            <div class="hero">
+                                <img src="img/71px-%D0%A2%D1%83%D1%80%D0%B1%D0%BE%D1%81%D0%B2%D0%B8%D0%BD-%D0%BF%D0%BE%D1%80%D1%82%D1%80%D0%B5%D1%82.png" />
+                                <h3>Турбосвин</h3>
+                            </div>
+                            <div class="hero">
+                                <img src="img/71px-%D0%A3%D0%B8%D0%BD%D1%81%D1%82%D0%BE%D0%BD-%D0%BF%D0%BE%D1%80%D1%82%D1%80%D0%B5%D1%82.png" />
+                                <h3>Уинстон</h3>
+                            </div>
 
-
-
-
-                <div class="class">
-                    <div class="class-header">
-                        <h2>Защита</h2><img src="img/DefenseIcon.png" />
-
+                            <div class="hero">
+                                <img src="img/71px-D.Va-%D0%BF%D0%BE%D1%80%D1%82%D1%80%D0%B5%D1%82.png" />
+                                <h3>D.Va</h3>
+                            </div>
+                        </div>
                     </div>
-                    <div class="heroes">
-                        <div class="hero">
-                            <img src="img/71px-%D0%91%D0%B0%D1%81%D1%82%D0%B8%D0%BE%D0%BD-%D0%BF%D0%BE%D1%80%D1%82%D1%80%D0%B5%D1%82.png" />
-                            <h3>Бастион</h3>
-                        </div>
-                        <div class="hero">
-                            <img src="img/71px-%D0%9A%D1%80%D1%8B%D1%81%D0%B0%D0%B2%D1%87%D0%B8%D0%BA-%D0%BF%D0%BE%D1%80%D1%82%D1%80%D0%B5%D1%82.png" />
-                            <h3>Крысавчик</h3>
-                        </div>
-                        <div class="hero">
-                            <img src="img/71px-%D0%9C%D1%8D%D0%B9-%D0%BF%D0%BE%D1%80%D1%82%D1%80%D0%B5%D1%82.png" />
-                            <h3>Мэй</h3>
-                        </div>
-                        <div class="hero">
-                            <img src="img/71px-%D0%A0%D0%BE%D0%BA%D0%BE%D0%B2%D0%B0%D1%8F_%D0%B2%D0%B4%D0%BE%D0%B2%D0%B0-%D0%BF%D0%BE%D1%80%D1%82%D1%80%D0%B5%D1%82.png" />
-                            <h3>Вдова</h3>
-                        </div>
+                    <div class="class">
+                        <div class="class-header">
+                            <h2>Поддержка</h2><img src="img/SupportIcon.png" />
 
-                        <div class="hero">
-                            <img src="img/71px-%D0%A2%D0%BE%D1%80%D0%B1%D1%8C%D0%BE%D1%80%D0%BD-%D0%BF%D0%BE%D1%80%D1%82%D1%80%D0%B5%D1%82.png" />
-                            <h3>Торбьорн</h3>
                         </div>
-
-                        <div class="hero">
-                            <img src="img/71px-%D0%A5%D0%B0%D0%BD%D0%B4%D0%B7%D0%BE-%D0%BF%D0%BE%D1%80%D1%82%D1%80%D0%B5%D1%82.png" />
-                            <h3>Хандзо</h3>
-                        </div>
-
-
-
-                    </div>
-                </div>
-
-
-
-
-                <div class="class">
-                    <div class="class-header">
-                        <h2>Танки</h2><img src="img/TankIcon.png" />
-
-                    </div>
-                    <div class="heroes">
-                        <div class="hero">
-                            <img src="img/71px-%D0%97%D0%B0%D1%80%D1%8F-%D0%BF%D0%BE%D1%80%D1%82%D1%80%D0%B5%D1%82.png" />
-                            <h3>Заря</h3>
-                        </div>
-                        <div class="hero">
-                            <img src="img/71px-%D0%9E%D1%80%D0%B8%D1%81%D0%B0-%D0%BF%D0%BE%D1%80%D1%82%D1%80%D0%B5%D1%82.png" />
-                            <h3>Ориса</h3>
-                        </div>
-                        <div class="hero">
-                            <img src="img/71px-%D0%A0%D0%B0%D0%B9%D0%BD%D1%85%D0%B0%D1%80%D0%B4%D1%82-%D0%BF%D0%BE%D1%80%D1%82%D1%80%D0%B5%D1%82.png" />
-                            <h3>Райнхард</h3>
-                        </div>
-                        <div class="hero">
-                            <img src="img/71px-%D0%A2%D1%83%D1%80%D0%B1%D0%BE%D1%81%D0%B2%D0%B8%D0%BD-%D0%BF%D0%BE%D1%80%D1%82%D1%80%D0%B5%D1%82.png" />
-                            <h3>Турбосвин</h3>
-                        </div>
-                        <div class="hero">
-                            <img src="img/71px-%D0%A3%D0%B8%D0%BD%D1%81%D1%82%D0%BE%D0%BD-%D0%BF%D0%BE%D1%80%D1%82%D1%80%D0%B5%D1%82.png" />
-                            <h3>Уинстон</h3>
-                        </div>
-
-                        <div class="hero">
-                            <img src="img/71px-D.Va-%D0%BF%D0%BE%D1%80%D1%82%D1%80%D0%B5%D1%82.png" />
-                            <h3>D.Va</h3>
-                        </div>
-
-
-
-                    </div>
-                </div>
-                <div class="class">
-                    <div class="class-header">
-                        <h2>Поддержка</h2><img src="img/SupportIcon.png" />
-
-                    </div>
-                    <div class="heroes">
-                        <div class="hero">
-                            <img src="img/71px-%D0%90%D0%BD%D0%B0-%D0%BF%D0%BE%D1%80%D1%82%D1%80%D0%B5%D1%82.png" />
-                            <h3>Ана</h3>
-                        </div>
-                        <div class="hero">
-                            <img src="img/71px-%D0%90%D0%BD%D0%B3%D0%B5%D0%BB-%D0%BF%D0%BE%D1%80%D1%82%D1%80%D0%B5%D1%82.png" />
-                            <h3>Ангел</h3>
-                        </div>
-                        <div class="hero">
-                            <img src="img/71px-%D0%94%D0%B7%D0%B5%D0%BD%D1%8A%D1%8F%D1%82%D1%82%D0%B0-%D0%BF%D0%BE%D1%80%D1%82%D1%80%D0%B5%D1%82.png" />
-                            <h3>Дзеньятта</h3>
-                        </div>
-                        <div class="hero">
-                            <img src="img/71px-%D0%9B%D1%83%D1%81%D0%B8%D0%BE-%D0%BF%D0%BE%D1%80%D1%82%D1%80%D0%B5%D1%82.png" />
-                            <h3>Лусио</h3>
-                        </div>
-                        <div class="hero">
-                            <img src="img/71px-%D0%A1%D0%B8%D0%BC%D0%BC%D0%B5%D1%82%D1%80%D0%B0-%D0%BF%D0%BE%D1%80%D1%82%D1%80%D0%B5%D1%82.png" />
-                            <h3>Симметра</h3>
+                        <div class="heroes">
+                            <div class="hero">
+                                <img src="img/71px-%D0%90%D0%BD%D0%B0-%D0%BF%D0%BE%D1%80%D1%82%D1%80%D0%B5%D1%82.png" />
+                                <h3>Ана</h3>
+                            </div>
+                            <div class="hero">
+                                <img src="img/71px-%D0%90%D0%BD%D0%B3%D0%B5%D0%BB-%D0%BF%D0%BE%D1%80%D1%82%D1%80%D0%B5%D1%82.png" />
+                                <h3>Ангел</h3>
+                            </div>
+                            <div class="hero">
+                                <img src="img/71px-%D0%94%D0%B7%D0%B5%D0%BD%D1%8A%D1%8F%D1%82%D1%82%D0%B0-%D0%BF%D0%BE%D1%80%D1%82%D1%80%D0%B5%D1%82.png" />
+                                <h3>Дзеньятта</h3>
+                            </div>
+                            <div class="hero">
+                                <img src="img/71px-%D0%9B%D1%83%D1%81%D0%B8%D0%BE-%D0%BF%D0%BE%D1%80%D1%82%D1%80%D0%B5%D1%82.png" />
+                                <h3>Лусио</h3>
+                            </div>
+                            <div class="hero">
+                                <img src="img/71px-%D0%A1%D0%B8%D0%BC%D0%BC%D0%B5%D1%82%D1%80%D0%B0-%D0%BF%D0%BE%D1%80%D1%82%D1%80%D0%B5%D1%82.png" />
+                                <h3>Симметра</h3>
+                            </div>
                         </div>
                     </div>
                 </div>
+            </div>
+            <div class="col-md-4 hero-details">
+                <table>
+                    <tr>
+                        <td colspan="2" class="hero-titel">Гэндзи</td>
+                    </tr>
+                    <tr class="fat-bottom">
+                        <td colspan="2"><img src="img/294px-%D0%93%D1%8D%D0%BD%D0%B4%D0%B7%D0%B8.png"></td>
+                    </tr>
+                    <tr>
+                        <td>Роль</td>
+                        <td>Штурм</td>
+                    </tr>
+                    <tr>
+                        <td>Настоящее имя</td>
+                        <td>Гэндзи Шимада</td>
+                    </tr>
+                    <tr>
+                        <td>Возраст</td>
+                        <td>35 лет</td>
+                    </tr>
+                    <tr>
+                        <td>Род занятий</td>
+                        <td>Искатель приключений</td>
+                    </tr>
+                    <tr>
+                        <td>Опкративная база</td>
+                        <td>Непал</td>
+                    </tr>
+                    <tr>
+                        <td>Принадлежность</td>
+                        <td>Клан Шимада</td>
+                    </tr>
+                    <tr>
+                        <td>Связи</td>
+                        <td>Хандзо Шимада</td>
+                    </tr>
+                    <tr class="fat-bottom">
+                        <td>Дата выхода</td>
+                        <td>10 ноября 2015</td>
+                    </tr>
+                    <tr>
+                        <td colspan="2">Характеристики</td>
+                    </tr>
+                    <tr>
+                        <td>Суммарное здоровье</td>
+                        <td>200</td>
+                    </tr>
+                    <tr>
+                        <td>Базовое здоровье</td>
+                        <td>200</td>
+                    </tr>
+                    <tr>
+                        <td>Броня</td>
+                        <td>0</td>
+                    </tr>
+                    <tr>
+                        <td>Щиты</td>
+                        <td>0</td>
+                    </tr>
+                    <tr>
+                        <td>Быстрый удар</td>
+                        <td>30</td>
+                    </tr>
+                    <tr class="fat-bottom">
+                        <td>Скорость передвижения</td>
+                        <td>6</td>
+                    </tr>
+                    <tr>
+                        <td colspan="2">
+                            <div class="sposobnosty">
+                                <div class="sposobnost"><img src="img/gendzy/1.png"></div>
+                                <div class="sposobnost"><img src="img/gendzy/%D0%9C%D0%BE%D0%BB%D0%BD%D0%B8%D0%B5%D0%BD%D0%BE%D1%81%D0%BD%D1%8B%D0%B9_%D1%83%D0%B4%D0%B0%D1%80.png"></div>
+                                <div class="sposobnost"><img src="img/gendzy/%D0%9E%D1%82%D1%80%D0%B0%D0%B6%D0%B5%D0%BD%D0%B8%D0%B5_%D0%B0%D1%82%D0%B0%D0%BA.png"></div>
+                            </div>
+                        </td>
+                    </tr>
+                </table>
+
             </div>
         </div>
     </div>
