--- a/heroes.html
+++ b/heroes.html
@@ -77,8 +77,7 @@
                                 <h3>Бастион</h3>
                             </div>
                             <div class="hero">
-                                <img src="img/71px-%D0%9A%D1%80%D1%8B%D1%81%D0%B0%D0%B2%D1%87%D0%B8%D0%BA-%D0%BF%D0%BE%D1%80%D1%82%D1%80%D0%B5%D1%82.png"
-                                />
+                                <img src="img/71px-%D0%9A%D1%80%D1%8B%D1%81%D0%B0%D0%B2%D1%87%D0%B8%D0%BA-%D0%BF%D0%BE%D1%80%D1%82%D1%80%D0%B5%D1%82.png" />
                                 <h3>Крысавчик</h3>
                             </div>
                             <div class="hero">
@@ -86,8 +85,7 @@
                                 <h3>Мэй</h3>
                             </div>
                             <div class="hero">
-                                <img src="img/71px-%D0%A0%D0%BE%D0%BA%D0%BE%D0%B2%D0%B0%D1%8F_%D0%B2%D0%B4%D0%BE%D0%B2%D0%B0-%D0%BF%D0%BE%D1%80%D1%82%D1%80%D0%B5%D1%82.png"
-                                />
+                                <img src="img/71px-%D0%A0%D0%BE%D0%BA%D0%BE%D0%B2%D0%B0%D1%8F_%D0%B2%D0%B4%D0%BE%D0%B2%D0%B0-%D0%BF%D0%BE%D1%80%D1%82%D1%80%D0%B5%D1%82.png" />
                                 <h3>Вдова</h3>
                             </div>
 
@@ -110,20 +108,18 @@
                         <div class="heroes">
                             <div class="hero">
                                 <img src="img/71px-%D0%97%D0%B0%D1%80%D1%8F-%D0%BF%D0%BE%D1%80%D1%82%D1%80%D0%B5%D1%82.png" />
-                                <h3>Заря</h3>
+                                <h3>Баба кач</h3>
                             </div>
                             <div class="hero">
                                 <img src="img/71px-%D0%9E%D1%80%D0%B8%D1%81%D0%B0-%D0%BF%D0%BE%D1%80%D1%82%D1%80%D0%B5%D1%82.png" />
                                 <h3>Ориса</h3>
                             </div>
                             <div class="hero">
-                                <img src="img/71px-%D0%A0%D0%B0%D0%B9%D0%BD%D1%85%D0%B0%D1%80%D0%B4%D1%82-%D0%BF%D0%BE%D1%80%D1%82%D1%80%D0%B5%D1%82.png"
-                                />
-                                <h3>Райнхард</h3>
+                                <img src="img/71px-%D0%A0%D0%B0%D0%B9%D0%BD%D1%85%D0%B0%D1%80%D0%B4%D1%82-%D0%BF%D0%BE%D1%80%D1%82%D1%80%D0%B5%D1%82.png" />
+                                <h3>Райнхардт</h3>
                             </div>
                             <div class="hero">
-                                <img src="img/71px-%D0%A2%D1%83%D1%80%D0%B1%D0%BE%D1%81%D0%B2%D0%B8%D0%BD-%D0%BF%D0%BE%D1%80%D1%82%D1%80%D0%B5%D1%82.png"
-                                />
+                                <img src="img/71px-%D0%A2%D1%83%D1%80%D0%B1%D0%BE%D1%81%D0%B2%D0%B8%D0%BD-%D0%BF%D0%BE%D1%80%D1%82%D1%80%D0%B5%D1%82.png" />
                                 <h3>Турбосвин</h3>
                             </div>
                             <div class="hero">
@@ -152,8 +148,7 @@
                                 <h3>Ангел</h3>
                             </div>
                             <div class="hero">
-                                <img src="img/71px-%D0%94%D0%B7%D0%B5%D0%BD%D1%8A%D1%8F%D1%82%D1%82%D0%B0-%D0%BF%D0%BE%D1%80%D1%82%D1%80%D0%B5%D1%82.png"
-                                />
+                                <img src="img/71px-%D0%94%D0%B7%D0%B5%D0%BD%D1%8A%D1%8F%D1%82%D1%82%D0%B0-%D0%BF%D0%BE%D1%80%D1%82%D1%80%D0%B5%D1%82.png" />
                                 <h3>Дзеньятта</h3>
                             </div>
                             <div class="hero">
@@ -174,7 +169,7 @@
                         <td colspan="2" class="hero-title"></td>
                     </tr>
                     <tr class="fat-bottom">
-                        <td colspan="2"><img src="img/294px-%D0%93%D1%8D%D0%BD%D0%B4%D0%B7%D0%B8.png" id="hero-icon"></td>
+                        <td colspan="2"><img src="" id="hero-icon"></td>
                     </tr>
                     <tr>
                         <td>Роль</td>
@@ -234,11 +229,9 @@
                     <tr>
                         <td colspan="2">
                             <div class="sposobnosty">
-                                <div class="sposobnost"><img src="img/gendzy/1.png" id="a-0"></div>
-                                <div class="sposobnost"><img src="img/gendzy/%D0%9C%D0%BE%D0%BB%D0%BD%D0%B8%D0%B5%D0%BD%D0%BE%D1%81%D0%BD%D1%8B%D0%B9_%D1%83%D0%B4%D0%B0%D1%80.png"
-                                        id="a-1"></div>
-                                <div class="sposobnost"><img src="img/gendzy/%D0%9E%D1%82%D1%80%D0%B0%D0%B6%D0%B5%D0%BD%D0%B8%D0%B5_%D0%B0%D1%82%D0%B0%D0%BA.png"
-                                        id="a-2"></div>
+                                <div class="sposobnost"><img src="" id="a-0"></div>
+                                <div class="sposobnost"><img src="" id="a-1"></div>
+                                <div class="sposobnost"><img src="" id="a-2"></div>
                             </div>
                         </td>
                     </tr>
