--- a/heroes.html
+++ b/heroes.html
@@ -108,7 +108,7 @@
                         <div class="heroes">
                             <div class="hero">
                                 <img src="img/71px-%D0%97%D0%B0%D1%80%D1%8F-%D0%BF%D0%BE%D1%80%D1%82%D1%80%D0%B5%D1%82.png" />
-                                <h3>Баба кач</h3>
+                                <h3>Заря</h3>
                             </div>
                             <div class="hero">
                                 <img src="img/71px-%D0%9E%D1%80%D0%B8%D1%81%D0%B0-%D0%BF%D0%BE%D1%80%D1%82%D1%80%D0%B5%D1%82.png" />
@@ -188,7 +188,7 @@
                         <td id="occupation"></td>
                     </tr>
                     <tr>
-                        <td>Опкративная база</td>
+                        <td>Оперативная база</td>
                         <td id="base"></td>
                     </tr>
                     <tr>
