--- a/heroes.html
+++ b/heroes.html
@@ -19,11 +19,14 @@
                 <a href="#">
                     <div class="button">Главная</div>
                 </a>
-                <a href="/heroes.html">
-                    <div class="button">Герои</div>
+                <a href="#">
+                    <div class="button selected">Герои</div>
+                </a>
+                <a href="maps.html">
+                    <div class="button">Карты</div>
                 </a>
                 <a href="#">
-                    <div class="button">Карты</div>
+                    <div class="button">Советы</div>
                 </a>
             </div>
         </div>
