--- a/index.html
+++ b/index.html
@@ -1,65 +1,54 @@
-<!DOCTYPE HTML Transitional//RU">
 <html>
 
 <head>
-
+    <link rel="stylesheet" href="bootstrap.min.css" />
     <link rel="stylesheet" href="./css/main.css" type="text/css">
-    <title>CSS text</title>
+    <title>Overwatcher</title>
+    <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="img/favicon.ico" type="image/x-icon">
+    <style type="text/css">
+        @font-face {
+            font-family: "Overwatch";
+            src: url("http://us.battle.net/forums/static/fonts/bignoodletoo/bignoodletoo.woff") format('woff');
+        }
+
+    </style>
+    <script src="scripts/jquery-3.2.1.min.js"></script>
+    <script src="scripts/index.js"></script>
+
+
 </head>
 
 <body>
-    <div class="container">
-        <div class="sidebar">
-            <p class="custom"><a href="#">Герои</a>
-                <a href="#">Карты</a>
-                <a href="#">Отзывы</a>
-            </p>
-        </div>
-        <div class="header">
-            <div class="hdr">
-                <div><span>O</span><span>V</span><span>E</span><span>R</span><span>W</span><span>A</span><span>T</span><span>C</span><span>H</span><span>E</span><span>R</span></div>
+    <video playsinline muted poster="img/logan.jpg" id="bgvid">
+    <source src="vids/1.mp4" type="video/mp4">
+    </video>
+
+    <div class="content">
+        <div class="container">
+            <h1>Overwatcher</h1>
+            <p>Overwatcher - здесь вы найдете интересную многим информацию о героях и картах игры Overwatch,а также получите полезные советы по игровой механики, которые особенно пригодятся новичкам в этой увлекательной, разнообразной игровой вселенной Overwatch.</p>
+            <div class="buttons">
+                <div class="button">
+                    <a href="heroes.html">Герои</a></div>
+
+                <div class="button">
+                    <a href="maps.html">Карты</a></div>
+
+                <div class="button">
+                    <a href="advices.html">Советы</a></div>
+
+
+
+
+
+
             </div>
-            <h1></h1>
         </div>
-        <div>
-            <h2 class="t1">Добро пожаловать на сайт OVERWATHER!</h2>
-            <p class="t2">Overwatcher-здесь вы найдете интересную многим информацию о героях и картах игры Overwatch,а также получите полезные советы по игровой механики, которые особенно пригодятся новичкам в этой увлекательной, разнообразной игровой вселенной Overwatch.</p>
-        </div>
-        <table class="table top9">
-            <caption>Карты</caption>
-            <tr>
-                <td><a href="#">suzzzvf</a></td>
-            </tr>
-            <tr>
-                <td><a href="#">suzzzvf</a></td>
-            </tr>
-            <tr>
-                <td><a href="#">suzzzvf</a></td>
-            </tr>
-            <tr>
-                <td><a href="#">suzzzvf</a></td>
-            </tr>
-            <tr>
-                <td><a href="#">suzzzvf</a></td>
-            </tr>
-            <tr>
-                <td><a href="#">suzzzvf</a></td>
-            </tr>
-            <tr>
-                <td><a href="#">suzzzvf</a></td>
-            </tr>
-            <tr>
-                <td><a href="#">suzzzvf</a></td>
-            </tr>
-            <tr>
-                <td><a href="#">suzzzvf</a></td>
-            </tr>
-            <tr>
-                <td><a href="#">suzzzvf</a></td>
-            </tr>
-        </table>
-        <div class="footer">&copy; STRIKER,DJAZZY</div>
+
+
     </div>
+
 </body>
 
 </html>
