--- a/heroes.html
+++ b/heroes.html
@@ -5,6 +5,8 @@
     <script src="scripts/jquery-3.2.1.min.js"></script>
     <script src="scripts/heroes.js"></script>
     <title>Герои</title>
+    <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="img/favicon.ico" type="image/x-icon">
 </head>
 
 <body>
@@ -16,7 +18,7 @@
                 <div class="small-title">OW</div>
             </div>
             <div class="buttons">
-                <a href="#">
+                <a href="index.html">
                     <div class="button">Главная</div>
                 </a>
                 <a href="#">
