--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <style type="text/css">
         @font-face {
             font-family: "Overwatch";
-            src: url("http://us.battle.net/forums/static/fonts/bignoodletoo/bignoodletoo.woff") format('woff');
+            src: url("fonts/bignoodletoo.woff") format('woff');
         }
 
     </style>
