--- a/heroes.html
+++ b/heroes.html
@@ -27,7 +27,7 @@
                 <a href="maps.html">
                     <div class="button">Карты</div>
                 </a>
-                <a href="#">
+                <a href="advices.html">
                     <div class="button">Советы</div>
                 </a>
             </div>
