--- a/maps.html
+++ b/maps.html
@@ -26,7 +26,7 @@
                 <a href="#">
                     <div class="button selected">Карты</div>
                 </a>
-                <a href="#">
+                <a href="advices.html">
                     <div class="button">Советы</div>
                 </a>
             </div>
