--- a/advices.html
+++ b/advices.html
@@ -128,9 +128,9 @@
                 <div class="adv-header"><img src="img/71px-%D0%93%D1%8D%D0%BD%D0%B4%D0%B7%D0%B8-%D0%BF%D0%BE%D1%80%D1%82%D1%80%D0%B5%D1%82.png">Гендзи</div>
                 <div class="list">
                     <ul>
-                        <li></li>
-                        <li></li>
-                        <li></li>
+                        <li> «Отражение атак» Гэндзи может отражать не только снаряды противников, но и блокировать урон от рукопашных ударов, например молота Райнхардта или удары Уинстона, использующего суперспособность.</li>
+                        <li> Убивая противников, вы можете восстанавливать способность «Молниеносный удар».</li>
+                        <li> Суперспособность Гэндзи очень важна для команды, вы должны стараться использовать ее с умом, это поможет перевернуть исход боя в вашу пользу. Во время активации суперспособности, враги могут вас убить , после чего вы потеряете заряд, постарайтесь не дать этому произойти.</li>
                     </ul>
                 </div>
             </div>
@@ -138,9 +138,9 @@
                 <div class="adv-header"><img src="img/71px-%D0%96%D0%BD%D0%B5%D1%86-%D0%BF%D0%BE%D1%80%D1%82%D1%80%D0%B5%D1%82.png">Жнец</div>
                 <div class="list">
                     <ul>
-                        <li>lizh;vzvzxvzhxvzxlzxbizxbxbzdbvcbzbzb</li>
-                        <li>zvzfbzdjgzh;jzkbkxlzc;xbkxb'iz[b;zmcvbcvbxvcb</li>
-                        <li>zbzbhjpblcnvbkhzdbodibp'z;lbjpvbouz['blc;vjbzpcvbzcvb</li>
+                        <li>Вы можете эффективно использовать способность «Шаг сквозь тень», переместившись за спину врагам, или уйти с поля битвы, чтобы перегруппироваться с командой.</li>
+                        <li>«Бестелесность» жнеца снимает с него все отрицательные эффекты, такие как Сфера диссонанса Дзенъятты, яд от Ядовитой мины Роковой вдовы, а так же замедление от Эндотермического бластера Мэй.</li>
+                        <li>Будьте осторожны ,используя ультимейт, так как его можно прервать любым оглушением, например Землетрясением Райнхардта или Светошумовой гранатой Маккри, или усыпить Транквилизатором Аны .</li>
                     </ul>
                 </div>
             </div>
@@ -148,9 +148,9 @@
                 <div class="adv-header"><img src="img/71px-%D0%9C%D0%B0%D0%BA%D0%BA%D1%80%D0%B8-%D0%BF%D0%BE%D1%80%D1%82%D1%80%D0%B5%D1%82.png">Маккри</div>
                 <div class="list">
                     <ul>
-                        <li></li>
-                        <li></li>
-                        <li></li>
+                        <li>Используйте «Кувырок», если вам нужно срочно перезарядить оружие или увернуться от снарядов противника.</li>
+                        <li>Маккри будет особенно эффективен против быстрых флангеров, таких как Трейсер и Сомбра, а так же против Фарры.</li>
+                        <li>Суперспособность Маккри может нанести очень много урона, если вы позволите ей скастоваться до конца, и ее не прервут вражеские герои, поэтому будьте аккуратны при нажатии кнопки ультимейта.</li>
                     </ul>
                 </div>
             </div>
@@ -158,9 +158,9 @@
                 <div class="adv-header"><img src="img/71px-%D0%A1%D0%BE%D0%BB%D0%B4%D0%B0%D1%82-76-%D0%BF%D0%BE%D1%80%D1%82%D1%80%D0%B5%D1%82.png">Солдат-76</div>
                 <div class="list">
                     <ul>
-                        <li></li>
-                        <li></li>
-                        <li></li>
+                        <li>Использование «Тактического визора» полностью восстанавливает ваш боезапас.</li>
+                        <li>Будьте осторожны, используя «Ракетный удар», так как он наносит урон не только противникам, но и вам</li>
+                        <li>Во время действия абсолютной способности вы не можете делать хэдшоты, потому что оружие наводится на центр тела противника.</li>
                     </ul>
                 </div>
             </div>
@@ -168,9 +168,9 @@
                 <div class="adv-header"><img src="img/71px-%D0%A1%D0%BE%D0%BC%D0%B1%D1%80%D0%B0-%D0%BF%D0%BE%D1%80%D1%82%D1%80%D0%B5%D1%82.png">Сомбра</div>
                 <div class="list">
                     <ul>
-                        <li></li>
-                        <li></li>
-                        <li></li>
+                        <li>Старайтесь убивать вражеских саппортов и взламывать танков, это поможет вашей команде в наступлении.</li>
+                        <li>Супеспособность Сомбры может прервать суперспособности многих героев, например «Меткий стрелок» Маккри, «Ракетный залп» Фарры, «Цветок смерти» Жнеца и «Турбосвинство» Турбосвина.</li>
+                        <li>Сомбра может взламывать аптечки на карте, что способно помочь ее команде и усложнить жизнь вражеским флангерам.</li>
                     </ul>
                 </div>
             </div>
@@ -178,9 +178,9 @@
                 <div class="adv-header"><img src="img/71px-%D0%A2%D1%80%D0%B5%D0%B9%D1%81%D0%B5%D1%80-%D0%BF%D0%BE%D1%80%D1%82%D1%80%D0%B5%D1%82.png">Трейсер</div>
                 <div class="list">
                     <ul>
-                        <li></li>
-                        <li></li>
-                        <li></li>
+                        <li>Импульсная бомба наносит урон и самой Трейсер, если она находится слишком близко к месту взрыва, так что приберегите для ультимейта пару скачков или возврат.</li>
+                        <li>Трейсер отлично подойдет для уничтожения вражеских телепортов или генераторов щита.</li>
+                        <li>Старайтесь подобраться к врагам сзади и как можно ближе, так как урон бластеров Трейсер напрямую зависит от расстояния до цели.</li>
                     </ul>
                 </div>
             </div>
@@ -188,9 +188,9 @@
                 <div class="adv-header"><img src="img/71px-%D0%A4%D0%B0%D1%80%D1%80%D0%B0-%D0%BF%D0%BE%D1%80%D1%82%D1%80%D0%B5%D1%82.png">Фарра</div>
                 <div class="list">
                     <ul>
-                        <li></li>
-                        <li></li>
-                        <li></li>
+                        <li>Старайтесь держаться как можно выше над землей, но опасайтесь вражеских хитсканов, они представляют наибольшую угрозу для вас</li>
+                        <li>Взрывная волна не наносит урона, однако с помощью этой способности можно сбрасывать противников в пропасти на картах.</li>
+                        <li>Будьте бдительны, ведь любая атака Фарры может нанести урон ей самой.</li>
                     </ul>
                 </div>
             </div>
