--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <div class="content">
         <div class="container">
             <h1>Overwatcher</h1>
-            <p>Overwatcher - здесь вы найдете интересную многим информацию о героях и картах игры Overwatch,а также получите полезные советы по игровой механики, которые особенно пригодятся новичкам в этой увлекательной, разнообразной игровой вселенной Overwatch.</p>
+            <p>Overwatcher - здесь вы найдете информацию о мире игры Overwatch, игровой механике и прочие полезные данные, а также получите советы, которые особенно пригодятся новичкам в этой увлекательной, разнообразной игровой вселенной.</p>
             <div class="buttons">
                 <div class="button">
                     <a href="heroes.html">Герои</a></div>
