--- a/advices.html
+++ b/advices.html
@@ -198,9 +198,9 @@
                 <div class="adv-header"><img src="img/71px-%D0%90%D0%BD%D0%B0-%D0%BF%D0%BE%D1%80%D1%82%D1%80%D0%B5%D1%82.png">Ана</div>
                 <div class="list">
                     <ul>
-                        <li></li>
-                        <li></li>
-                        <li></li>
+                        <li> Хоть граната и отлично справляется со способностями вроде  «Передышки»  Турбосвина или «Саморемонта»  Бастиона, но она не помешает  Торбьорну починить его  «Турель».</li>
+                        <li>Оружие Аны не наносит критический урон при попадании в уязвимые точки (голову или силовое ядро Бастиона).</li>
+                        <li>Используя «Биотическую гранату» старайтесь подойти к союзникам на расстояние 4 метров, чтобы ее эффекты подействовали и на вас.</li>
                     </ul>
                 </div>
             </div>
@@ -208,9 +208,9 @@
                 <div class="adv-header"><img src="img/71px-%D0%90%D0%BD%D0%B3%D0%B5%D0%BB-%D0%BF%D0%BE%D1%80%D1%82%D1%80%D0%B5%D1%82.png">Ангел</div>
                 <div class="list">
                     <ul>
-                        <li></li>
-                        <li></li>
-                        <li></li>
+                        <li>Если вы направите усиление на  D.Va, когда она использует  «Самоуничтожение», то меха нанесет увеличенный урон. На саму меху направлять усиливающий луч не нужно.</li>
+                        <li>Имея при себе готовое «Воскрешение», выберите позицию, в которой вражеские герои вас не убьют, затем постарайтесь воскресить как можно больше союзников.</li>
+                        <li>Ангел может летать вместе с Фаррой, образуя очень мощную связку, с которой противникам будет очень тяжело справиться</li>
                     </ul>
                 </div>
             </div>
@@ -218,9 +218,9 @@
                 <div class="adv-header"><img src="img/71px-%D0%94%D0%B7%D0%B5%D0%BD%D1%8A%D1%8F%D1%82%D1%82%D0%B0-%D0%BF%D0%BE%D1%80%D1%82%D1%80%D0%B5%D1%82.png">Дзеньятта</div>
                 <div class="list">
                     <ul>
-                        <li></li>
-                        <li></li>
-                        <li></li>
+                        <li>Во время действия «Трансцендентности» Дзенъятта становится неуязвим и невосприимчив к любым видам контроля, однако на него действуют отталкивания.</li>
+                        <li>«Сфера» возвращается к Дзенъятте, если союзник, к которому она была прикреплена, покинул поле зрения героя более чем на 3 секунды.</li>
+                        <li> Старайтесь приберечь свою суперсособность на случай ультимейта вражеских героев, имеющих большой урон, например «Клинок Дракона» Гэндзи.</li>
                     </ul>
                 </div>
             </div>
@@ -228,9 +228,9 @@
                 <div class="adv-header"><img src="img/71px-%D0%9B%D1%83%D1%81%D0%B8%D0%BE-%D0%BF%D0%BE%D1%80%D1%82%D1%80%D0%B5%D1%82.png">Лусио</div>
                 <div class="list">
                     <ul>
-                        <li></li>
-                        <li></li>
-                        <li></li>
+                        <li>С помощью альтернативного режима огня можно сталкивать противников с объекта или в пропасть, однако, невозможно отбросить меху  D.Va во время «Самоуничтожения»,  «Турель»  Торбьорна, а так же Бастиона в  режиме турели .</li>
+                        <li>Вы можете ездить спиной вперед. Эту возможность можно включить в настройках игры в разделе Управление.</li>
+                        <li> Будьте внимательны, щиты от «Звукового барьера» не накладываются на союзников, находящихся за стенами или препятствиями.</li>
                     </ul>
                 </div>
             </div>
@@ -238,9 +238,9 @@
                 <div class="adv-header"><img src="img/71px-%D0%A1%D0%B8%D0%BC%D0%BC%D0%B5%D1%82%D1%80%D0%B0-%D0%BF%D0%BE%D1%80%D1%82%D1%80%D0%B5%D1%82.png">Симметра</div>
                 <div class="list">
                     <ul>
-                        <li></li>
-                        <li></li>
-                        <li></li>
+                        <li>Старайтесь ставить «Телепорт» и «Генератор щита» в непредсказуемое место, чтобы вражеские флангеры не смогли его найти и уничтожить.</li>
+                        <li>Фотонный излучатель (только в альтернативном режиме) игнорирует  Энергетический барьер Райнхардта и  Защитный купол  Уинстона.  Гэндзи может отразить альтернативный режим огня Симметры своей способностью  Отражение атак, а основную атаку — нет.</li>
+                        <li> В начале игры можно поставить турели возле вражеской базы, чтобы быстрее получить полный заряд ультимейта.</li>
                     </ul>
                 </div>
             </div>
